--- a/app/Resources/views/dashboard/index.html.twig
+++ b/app/Resources/views/dashboard/index.html.twig
@@ -42,7 +42,7 @@
             <div class="card-body">
                 <h5 class="card-title">Gestion des fabricants</h5>
                 <p class="card-text">Ajouter, modifier, supprimer</p>
-                <a href="#" class="btn btn-primary">Entrer</a>
+                <a href="{{ path('manufacturers') }}" class="btn btn-primary">Entrer</a>
             </div>
         </div>
 
