--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,9 @@
         {% if app.user %}
             <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><i class="fas fa-mobile-alt"></i> Bilemo Admin</a>
+                    <a class="navbar-brand" href="{{ path('dashboard') }}">
+                        <span class="fas fa-mobile-alt"></span> Bilemo Admin
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -24,6 +26,14 @@
                                 <a class="nav-link" href="{{ path('dashboard') }}">
                                     Dashboard 
                                     {% if 'dashboard' in app.request.get('_route') %}
+                                        <span class="sr-only">(current)</span>
+                                    {% endif %}
+                                </a>
+                            </li>
+                            <li class="nav-item {% if 'mobiles' in app.request.get('_route') %}active{% endif %}">
+                                <a class="nav-link" href="{{ path('mobiles') }}">
+                                    Mobiles
+                                    {% if 'mobiles' in app.request.get('_route') %}
                                         <span class="sr-only">(current)</span>
                                     {% endif %}
                                 </a>
