--- a/app/Resources/views/dashboard/index.html.twig
+++ b/app/Resources/views/dashboard/index.html.twig
@@ -46,14 +46,14 @@
             </div>
         </div>
 
-        <div class="card text-center">
+        <div class="card text-center mt-4">
             <div class="card-header">
                 Utilisateurs
             </div>
             <div class="card-body">
                 <h5 class="card-title">Gestion des utilisateurs</h5>
                 <p class="card-text">Consulter</p>
-                <a href="#" class="btn btn-primary">Entrer</a>
+                <a href="{{ path('users') }}" class="btn btn-primary">Entrer</a>
             </div>
         </div>
     </div>
