--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,6 +62,14 @@
                                     {% endif %}
                                 </a>
                             </li>
+                            <li class="nav-item {% if 'users' in app.request.get('_route') %}active{% endif %}">
+                                <a class="nav-link" href="{{ path('users') }}">
+                                    Utilisateurs 
+                                    {% if 'users' in app.request.get('_route') %}
+                                        <span class="sr-only">(current)</span>
+                                    {% endif %}
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
