Warning message on mobile form added

--- a/app/Resources/views/mobiles/form.html.twig
+++ b/app/Resources/views/mobiles/form.html.twig
@@ -1,9 +1,15 @@
+<div class="alert alert-warning" role="alert">
+	<h4 class="alert-heading">Attention</h4>
+	<p>
+		L'ajout et la modification de certains éléments d'un mobile sont encore en bêta. Par mesure de sécurité, effectuez vos modifications du catalogue de mobiles via les fixtures.
+	</p>
+</div>
 <div class="card">
-  	<div class="card-header">
+	<div class="card-header">
     	Informations
   	</div>
   	<div class="card-body">
-  		{{ form_start(form) }}    
+  		{{ form_start(form) }}
 		    <!-- NAME -->
 		    {{ form_row(form.name) }}
 
